<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_bg"
    android:orientation="vertical">

    <Button
        android:id="@+id/TestButton1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:text="@string/title_activity_ksatria1"
        android:onClick="changeActivity" />
    
    <Button
        android:id="@+id/TestButton2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:text="@string/title_activity_ksatria2"
        android:onClick="changeActivity" />
    
    <Button
        android:id="@+id/TestButton3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:text="@string/title_activity_ksatria3"
        android:onClick="changeActivity" />
    
    <Button
        android:id="@+id/TestButton4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:text="@string/title_activity_ksatria4"
        android:onClick="changeActivity" />
    
    <Button
        android:id="@+id/TestButton5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:text="@string/title_activity_ksatria5"
        android:onClick="changeActivity" />
    
</LinearLayout>

